      with asterisks like changelog entries.
    + [RA] Check that the most recent NEWS.Debian entry is followed by a
      blank line for apt-listchanges.  Thanks, Adeodato Simó.  (Addresses
      the Lintian part of #523436)
    + [RA] Warn if the version of the latest NEWS.Debian entry doesn't
      appear in the changelog.  Thanks, Christoph Berg.  (Closes: #550594)
  * checks/cruft:
    + [RA] Fix the regex to properly ignore CMakeCache.txt in the debian
      directory.  Thanks, Aaron M. Ucko.  (Closes: #553264)
    + [RA] Check for a non-native package with a native version.  Thanks,
      Andreas Beckmann.
  * checks/debhelper:
    + [RA] Always warn if debhelper is in use but no ${misc:Depends}
      dependency is present rather than checking which specific debhelper
      commands use it.  Any debhelper command may start adding
      dependencies to ${misc:Depends} at any time.  Lower the certainty to
      possible, since a missing ${misc:Depends} may not cause problems.
  * checks/fields.desc:
    + [RA] Fix spelling error in dfsg-version-with-period tag description.
      Thanks, Jakub Wilk.  (Closes: #563185)
  * checks/files{,.desc}:
    + [RG] Add a missing 'it' to the description of duplicate-font-file.
    + [RG] Add detection of nusoap to the embedded PHP libraries check.
    + [RG] Check that udev rules are not installed in /etc/udev/rules.d.
      Thanks, Marco d'Itri.  (Closes: #559208)
  * checks/init.d{,.desc}:
    + [RG] Bump severity of init.d-script-sourcing-without-test to serious.
    + [RG] Lower the severity of init.d-script-does-not-provide-itself
      to minor.
    + [RG] Fix a init.d-script-possible-missing-stop false positive when
      stopping on runlevels 2-5.
    + [RG] Mention 'killprocs' in init.d-script-possible-missing-stop's
      description.  Thanks, Kurt Roeckx.  (Closes: #562608)
    + [RG] Warn about init scripts with incomplete start runlevels.