@@ -24,6 +24,10 @@ lintian (2.3.1) UNRELEASED; urgency=low
       the Lintian part of #523436)
     + [RA] Warn if the version of the latest NEWS.Debian entry doesn't
       appear in the changelog.  Thanks, Christoph Berg.  (Closes: #550594)
+  * checks/control-file:
+    + [RA] Fix parsing of dependencies for weak-library-dev-dependency
+      when the content of Depends begins with a newline.  Thanks, Julien
+      Cristau.  (Closes: #563370)
   * checks/cruft:
     + [RA] Fix the regex to properly ignore CMakeCache.txt in the debian
       directory.  Thanks, Aaron M. Ucko.  (Closes: #553264)
